# bounded-naturals

./: bounded-naturals.cabal
src/Numeric/Natural/: Bounded.hs
test/: Spec.hs
